See RN5.2.0 (20250729)
- Upgrade Xmail to support Android-16 Baklava (API-36) with the following changes:
  * Android Studio Narwhal | 2025.1.1
  * https://services.gradle.org/distributions/gradle-8.14.2-bin.zip
  * classpath 'com.android.tools.build:gradle:8.11.1'
  * classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.21'
- Raise minSdk support to API-26; many third parties libraries drop support for < API-26
- Third party libraries upgraded to latest compatible version for API-36:
- Use safe-content-resolver-v21; to fix native library arm64-v8a/libos-compat.so (v14) is not 16 KB aligned
- Disable splitActionBarWhenNarrow for API-36+; else ActionBar is overlaid by Navigation Bar if enabled
- Move AccountSetupActivity#authDialog to use AlertDialog to avoid content clipping, and better compatibility with API-36.
- Fix SoftKeyboard not shown in AlertDialog (Dialog class is OK); see AccountSetupActivity
- AccountSetupActivity: webSettings.setUserAgentString; using AppId-version causes outlook.com web page shows blank;
  but it is required for gmail.com. So use mixed of both for it to work.
- OAuth2WebViewClient: do not execute errorHandler.onError(error) if errorHandler == null.
- Migrate deprecated intent.getSerializableExtra() to IntentCompat.getSerializableExtra(), and
  bundle.getSerializable() to BundleCompat.getSerializable().
- Fixed tokenautocomplete:3.0.2 entry field not selectable by click, use setTextIsSelectable(true).
- Reimplement deprecated classes/methods i.e. onBackPressed and AsyncTask with new functions.
- Remove permissions request for permission-group.XMAIL, REMOTE_CONTROL, READ_MESSAGES, and DELETE_MESSAGES.
- Remove meta-data UI_OPTIONS and PARENT_ACTIVITY support for <= API-16.

Fixes for API < 26 (not implemented)
- Duration was added in API level-26; see https://github.com/JakeWharton/ThreeTenABP
- Add new lib 'org.slf4j:slf4j-log4j12:2.0.17'
- Note10+ crashes when open mail from 'The Scoot Team'; AVD API-36 has not problem. Earlier vers